typescript/checker/tests/conformance/es2017/useSharedArrayBuffer5.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            68,
        ),
        hi: BytePos(
            85,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer5.ts:4:16
  |
4 | var foge = new SharedArrayBuffer(1024);
  |                ^^^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            108,
        ),
        hi: BytePos(
            112,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer5.ts:5:15
  |
5 | var species = foge[Symbol.species];
  |               ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            147,
        ),
        hi: BytePos(
            151,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer5.ts:6:17
  |
6 | var stringTag = foge[Symbol.toStringTag];
  |                 ^^^^

